Pool actions alignment fix

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -2141,6 +2141,7 @@ div.pool.overview{
 
     li{
       @include display_inline_block;
+      vertical-align: middle;
     }
     li + li{
       margin-left: 14px;
@@ -2691,7 +2692,7 @@ div.build_status{
       position:absolute;
       z-index:1000;
       background-color:#ececec;
-      top: 10px;
+      top: 5px;
       right: -15px;
       -webkit-border-radius: 4px 0px 4px 4px; -moz-border-radius: 4px 0px 4px 4px; border-radius: 4px 0px 4px 4px;
       box-shadow: 0 7px 7px rgba(0, 0, 0, 0.50);
@@ -2733,7 +2734,8 @@ div.build_status{
   &:hover{
     border-color: #999;
     background: #ececec url(../../images/deployment-button-pressed.png) no-repeat 2px 0px;
-    padding: 0.5em 14px 1em 14px;
+    padding: 0.5em 14px 0.5em 14px;
+    vertical-align: top;
     box-shadow: 0 7px 7px rgba(0, 0, 0, 0.50);
     -moz-box-shadow: 0 7px 7px rgba(0, 0, 0, 0.50);
     -webkit-box-shadow: 0 7px 7px rgba(0, 0, 0, 0.50);
